--- a/Header.html
+++ b/Header.html
@@ -1,5 +1,10 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title> Omega Mechanical Ltd</title>
-	</head>
+<h1> Omega Mechanical Ltd</h1>
+
+
+<p> Omega Mechanical is a construction company </p>
+
+<ul>
+	<li>Construction</li>
+	<li>Plumbing</li>
+	<li>Mehanical</li>
+</ul>
